--- a/gczy.html
+++ b/gczy.html
@@ -56,7 +56,7 @@
             <TD width=95 height=12><a href="pl.html">
 			<font size="2" color="#008080">网友评论篇</font></a></TD>              </TR></TBODY></TABLE></TBODY></TABLE></div>		
    </TR></TBODY></TABLE></TD></TR></TBODY></TABLE></div>
-<div style="position:absolute; left:24px; top:234px; width:516px; height:664px; z-index:0; BACKGROUND-COLOR:">
+<div style="position:absolute; left:24px; top:234px; width:756px; height:663px; z-index:0; BACKGROUND-COLOR:">
 	<TABLE width="152%" border=0><TBODY><TR><TD align=left>
 		<FONT lang=ZH-CN face=宋体>
 		<b><i><FONT size=7 color="#FF0000">共产主义 </font></i></b><FONT size=2>
@@ -102,12 +102,12 @@
 				<FONT face=System size=2>
 				<A href="znzc/hxmc.htm" target=_blank>歌亿民核心名词逻辑关系</A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="znzc/tts.htm" target=_blank>天堂书</A> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<A href="gzly/lw.htm" target=_blank>《青年文学家》期刊《当代基督教共产主义—葛亦民的<神经>》</A><br><br>
 
-<A href="scsl/wx.html" target=_blank> 微信公众号、QQ群</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><P align=justify>
-				　<P align=justify>
-				　<P align=justify>
-				　<P align=justify>
-				<FONT face=System size=2>
-				&nbsp; &nbsp;<script>
+<A href="scsl/wx.html" target=_blank> 微信公众号、QQ群</a>
+           </font> </font>
+		
+
+ </font></TD>   
+    </TR></TBODY> <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -115,46 +115,19 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script><br><br> 
-
-
-       </I></B></font> </font>
-		<div style="text-align:center;margin-top:100px;">
-
-<font color="#FF0000" size="4">
-
-<span>距离2033年11月26日世界大同还有：</span>
-</font>
-<span id="t_d"></span> 
-<font color="#FF0000" size="4"> 
-<span id="t_h">00时</span> 
-<span id="t_m">00分</span> 
-<span id="t_s">00秒</span> 
-</font> 
-</div> 
-
-<script type="text/javascript"> 
-function getRTime(){ 
-var EndTime= new Date('2033/11/26 00:00:00'); //截止时间 
-var NowTime = new Date(); 
-var t =EndTime.getTime() - NowTime.getTime(); 
-var d=Math.floor(t/1000/60/60/24); 
-var h=Math.floor(t/1000/60/60%24); 
-var m=Math.floor(t/1000/60%60); 
-var s=Math.floor(t/1000%60); 
-
-document.getElementById("t_d").innerHTML = d + "天"; 
-document.getElementById("t_h").innerHTML = h + "时"; 
-document.getElementById("t_m").innerHTML = m + "分"; 
-document.getElementById("t_s").innerHTML = s + "秒"; 
-} 
-setInterval(getRTime,1000); 
-</script>
-
- </font></TD>    
-          
-    </TR></TBODY></TABLE></div>
-	<div style="position:absolute; left:959px; top:233px; width:250px; height:657px; z-index:0; BACKGROUND-COLOR:">
+</script>	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></TABLE></div>
+	<div style="position:absolute; left:959px; top:233px; width:250px; height:521px; z-index:0; BACKGROUND-COLOR:">
 		<TABLE height=350 cellSpacing=0 cellPadding=0 width="100%" border=0><TBODY><TR><TD vAlign=top height=221>
 			<TABLE height=201 cellSpacing=1 borderColorDark=#cccc99 width="105%" align=center borderColorLight=#ffffff border=1><TBODY><TR><TD vAlign=top height=196><TABLE cellSpacing=1 cellPadding=1 width="100%" border=0><TBODY><TR align=middle bgColor=#cccc99><TD align=right colSpan=2 height=22><DIV align=center><FONT size=2>信仰</FONT></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT face=仿宋_GB2312 size=2><STRONG><IMG height=6 src="pic/dian.gif" width=4></STRONG></FONT></DIV></TD><TD width="81%"><DIV align=left><A href="dxly/ygz.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>一个宗教的诞生</FONT></A></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><DIV align=center><FONT face=仿宋_GB2312 size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></DIV></TD><TD width="81%"><DIV align=left><DIV align=left><A href="dxly/zy.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>真言：信葛亦民得永生</FONT></A></DIV></DIV></TD></TR><TR align=middle><TD align=right width="19%" height=20><DIV align=center><DIV align=center><FONT face=仿宋_GB2312 size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></DIV></TD><TD width="81%" height=20><DIV align=left><DIV align=left><A href="dxly/wrw.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>我认为我是社会刻意试炼的</FONT></A></DIV></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><DIV align=center><FONT face=仿宋_GB2312 size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></DIV></TD><TD width="81%"><DIV align=left><DIV align=left><A href="xyyd/gym.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>葛亦民就是典型敌基督 其团队更是典型敌基督团伙
 
@@ -164,11 +137,21 @@ setInterval(getRTime,1000);
 
 
  
-</DIV></TD></TR><TR align=middle><TD align=right width="19%" height=13><DIV align=center><DIV align=center><FONT face=仿宋_GB2312 size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></DIV></TD><TD width="81%" height=13><DIV align=left><A href="xyyd/rgg.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>如果葛亦民是先圣，我们是后圣。
+</DIV></TD></TR><TR align=middle><TD align=right width="19%" height=13><DIV align=center><DIV align=center><FONT face=仿宋_GB2312 size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></DIV></TD><TD width="81%" height=13><DIV align=left><A href="xyyd/rgg.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>如果葛亦民是先圣，我们是后圣。</A>
 
 
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- s -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2547640047"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
  
 </DIV></TD></TR<TD vAlign=top align=middle></TD></TR></TBODY></TABLE></div>
 </script></body></html>
