--- a/jdj.html
+++ b/jdj.html
@@ -58,7 +58,17 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script><br><br> 
+</script><br><br> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
           &nbsp&nbsp&nbsp; &nbsp&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp&nbsp; 
@@ -70,7 +80,17 @@ var _hmt = _hmt || [];
 <div style="position:absolute; left:999px; top:108px; width:259px; height:499px; z-index:1; BACKGROUND-COLOR:"><TABLE height=418 cellSpacing=0 cellPadding=0 width="100%" border=0><TBODY><TR><TD vAlign=top height=221><TABLE height=201 cellSpacing=1 borderColorDark=#cccc99 width="84%" align=center borderColorLight=#ffffff border=1><TBODY><TR><TD vAlign=top height=196><TABLE cellSpacing=1 cellPadding=1 width="100%" border=0><TBODY><TR align=middle bgColor=#cccc99><TD align=right colSpan=2 height=22><DIV align=center><FONT size=2>信望爱</FONT></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><P align=justify><A href="xwa/zsyg.html" target=_blank><FONT color=#000000 size=2>这是一个真实的故事</FONT></A></P></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><P align=justify><A href="xwa/wmz.html" target=_blank><FONT color=#000000 size=2>我们最需要什么</FONT></A></P></DIV></TD></TR><TR align=middle><TD align=right width="19%" height=20><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%" height=20><DIV align=left><FONT lang=ZH-CN face=宋体><P align=justify><A href="xwa/zjm.html" target=_blank><FONT color=#000000 size=2>最简明圣经知识</FONT></A></P></FONT></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><A href="xwa/nnc.html" target=_blank><FONT color=#000000 size=2>你能从亚当听从夏娃吃禁果得出什么结论</FONT></A></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><P align=justify><A href="xwa/wmw.html" target=_blank><FONT color=#000000 size=2>我们为什么活着</FONT></A></P></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><A href="xwa/sdc.html" target=_blank><FONT color=#000000 size=2>上帝存在七证明</FONT></A></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><P align=justify><A href="xwa/yzz.html" target=_blank><FONT color=#000000 size=2>宇宙之外之后的非宇宙</FONT></A></P></DIV></TD></TR><TR align=middle><TD align=right width="19%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD><TD width="81%"><DIV align=left><P align=justify><A href="xwa/sdt.html" target=_blank><FONT color=#000000 size=2>上帝他老人家在哪里</FONT></A></P></DIV></TD></TR><TR align=middle>
 	<TD align=right width="19%" height="16"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD>
 	<TD width="81%" height="16"><DIV align=left><FONT lang=ZH-CN face=宋体><P align=justify><A href="xwa/adj.html" target=_blank><FONT color=#000000 size=2>爱的基督教和受难的基督徒</FONT></A></P></FONT></DIV></TD></TR><TR align=middle><TD align=right colSpan=2 height=23><FONT size=2></FONT></TD></TR></TBODY></TABLE></TD></TR></TBODY></TABLE></TD></TR><TR><TD vAlign=top align=middle>
-</script></TD></TR></TBODY></TABLE></div>
+</script></TD></TR><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- s -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2547640047"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></TBODY></TABLE></div>
 <div style="position:absolute; left:-5px; top:119px; width:1002px; height:624px; z-index:0; BACKGROUND-COLOR:">
 		<TABLE cellSpacing=0 cellPadding=0 width=900 border=0 height="16"><TBODY><TR>
 			<TD bgColor=#dee3ed height=16>
