--- a/sd.html
+++ b/sd.html
@@ -90,7 +90,17 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script><br><br> 
+</script><br><br> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 	
 </P>         
@@ -124,4 +134,14 @@ var _hmt = _hmt || [];
 <TD width="92%" height="42"><DIV align=left><DIV align=left><A href="xwa/mk7.htm" target=_blank><FONT face=仿宋_GB2312 color=#000000 size=2>神告诉系统MK7--葛亦民徒有10万多人</FONT></A></DIV></DIV></TD>
 </TR>
 	
-</TD></TR></TBODY></TABLE</body></html>
+</TD></TR><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- s -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2547640047"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></TBODY></TABLE</body></html>
