--- a/sj.html
+++ b/sj.html
@@ -111,7 +111,17 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script><br><br> 
+</script><br><br> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </P>
      
         </FONT></TD>             
@@ -137,7 +147,20 @@ var _hmt = _hmt || [];
 	<TD width="76%"><DIV align=left><P align=justify><A href="xwa/hmz.htm" target=_blank><FONT color=#000000 size=2>葛亦民和毛泽东</FONT></A></P></DIV></TD></TR><TR align=middle>
 	<TD align=right width="20%"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD>
 	<TD width="76%"><DIV align=left><FONT lang=ZH-CN face=宋体><P align=justify><A href="xwa/hsd.htm" target=_blank><FONT color=#000000 size=2>葛亦民和上帝</FONT></A></P></FONT></DIV></TD></TR></TBODY></TABLE></TD></TR></TBODY></TABLE></TD></TR><TR><TD vAlign=top align=middle>
-	</TD></TR></TBODY></TABLE></div>
+	</TD></TR>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- s -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2547640047"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	
+	</TBODY></TABLE></div>
 	<div style="position:absolute; left:-6px; top:115px; width:1002px; height:638px; z-index:0; BACKGROUND-COLOR:">
 		<TABLE cellSpacing=0 cellPadding=0 width=900 border=0 height="16"><TBODY><TR>
 			<TD bgColor=#dee3ed height=16>
