--- a/xw.html
+++ b/xw.html
@@ -78,11 +78,11 @@
 		<p><IMG SRC="pic/cbzm.jpg"WIDTH=600 HEIGHT=800 BORDER=0 ></p><p><IMG SRC="pic/qyzm.jpg" ><p>
 		香港特別行政區政府憲報第4號特別副刊內的《香港印刷書刊目錄》。 
 		<p>
-		<a href="https://www.gld.gov.hk/egazette/pdf/20151939/cs42015193957.pdf">https://www.gld.gov.hk/egazette/pdf/20151939/cs42015193957.pdf</a><p>
+		<a href="https://www.gld.gov.hk/egazette/pdf/20151939/cs42015193957.pdf" target="_blank">https://www.gld.gov.hk/egazette/pdf/20151939/cs42015193957.pdf</a><p>
 		<span style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; font-size: 12pt;">
 		同時按下&nbsp;Ctrl&nbsp;及&nbsp;F&nbsp;鍵</span><span style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">&nbsp;</span><br style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 		<span style="color: rgb(0, 0, 0); font-family: &quot;lucida Grande&quot;, Verdana, &quot;Microsoft YaHei&quot;; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; font-size: 12pt;">
-		&nbsp;在「尋找」對話方塊空格內，輸入978-988-<span t="5" times style="border-bottom: 1px dashed rgb(204, 204, 204);">13762-1</span>-3</span><p><IMG SRC="pic/hkzfsjsh.jpg" ><IMG SRC="pic/sjsj.jpg"></a> </p>
+		&nbsp;在「尋找」對話方塊空格內，輸入 葛亦民 或 978-988-<span t="5" times style="border-bottom: 1px dashed rgb(204, 204, 204);">13762-1</span>-3</span><p><IMG SRC="pic/hkzfsjsh.jpg" ><IMG SRC="pic/sjsj.jpg"></a> </p>
 				<p>2、肥罗是否转会扑朔迷离 米兰皇马究竟谁在说谎<br>
 		安切洛蒂是在夏季联赛米兰1：0战胜马竞的赛后媒体见面会上做出上述辟谣性声名的，用他的话讲，“《意大利体育报》和其他意大利或者西班牙的报纸一样，毕竟不是《耶梅经》。”<br>
 		耶梅经即神经，神经最早版本。安帅举例神经，即表明听众人人知道。不然，别人听不懂。</p>
@@ -158,7 +158,8 @@
 				<p>&nbsp;<a href="http://www.cnki.com.cn/Article/CJFDTotal-QNWJ201511133.htm" target="_blank"><IMG SRC="pic/qlwxj.jpg"></a>
 <IMG SRC="pic/qlwxjlw.jpg"> 
 
-<br><br><p></p><p></p><div><br><br><br><script>
+<br><br><p></p><p>　</p><p>　</p>
+<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p><p></p><div><br><br><br><script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -167,7 +168,21 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script><br><br> 
-<p></p><p></p><p></p><p></p>
+<p></p><p>
+
+</p><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<p></p><p></p>
 </div>
 </div>
 
