--- a/pl3.html
+++ b/pl3.html
@@ -6,7 +6,7 @@
 <table border="0" cellpadding="0" style="border-collapse: collapse" width="59%"> 
         <tr> 
                
- <td> <A href="http://www.gegod.comz/bbs" target=_blank>
+ <td> <A href="http://www.gegod.com/bbs" target=_blank>
 <Center><img border=0 src="pic/bannerd.jpg" ></Center></A></td> 
                  
          </tr> 
@@ -46,6 +46,11 @@
 &nbsp;<p><a href="nszz/201989.htm" target="_blank">2019年8-9月</a>&nbsp;&nbsp;<a href="nszz/201910.htm" target="_blank">2019年10月</a>&nbsp;&nbsp;<a href="nszz/20191112.htm" target="_blank">2019年11-12月</a>&nbsp;&nbsp;
 <a href="nszz/20200102.htm" target="_blank">2020年1-2月</a>&nbsp;&nbsp;<a href="nszz/20203.htm" target="_blank">2020年3月</a>&nbsp;&nbsp;<a href="nszz/20204.htm" target="_blank">2020年4月</a>&nbsp;&nbsp;<a href="nszz/20205.htm" target="_blank">2020年5月</a>&nbsp;&nbsp;
 <p><a href="nszz/202067.htm" target="_blank">2020年6-7月</a>&nbsp;&nbsp;<a href="nszz/202089.htm" target="_blank">2020年8-9月</a>&nbsp;&nbsp;<a href="nszz/202010.htm" target="_blank">2020年10月</a>&nbsp;&nbsp;<a href="nszz/202011.htm" target="_blank">2020年11月</a>&nbsp;&nbsp;<a href="nszz/202012.htm" target="_blank">2020年12月</a>&nbsp;&nbsp;
+<a href="../dxrj/20210102.htm" target="_blank">2021年1、2月</a>&nbsp;&nbsp;
+	<p><a href="../dxrj/202103.htm" target="_blank">2021年3月</a>&nbsp;&nbsp;<a href="../dxrj/202104.htm" target="_blank">2021年4月</a>&nbsp;&nbsp;<a href="../dxrj/202105.htm" target="_blank">2021年5月</a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -85,7 +90,17 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script><br><br> 
-　</P>
+　</P><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 
@@ -112,7 +127,17 @@ var _hmt = _hmt || [];
 	<TD width="79%"><DIV align=left><P align=justify><A href="nszz/scwxx.htm" target=_blank><FONT color=#000000 size=2>神赐我心想事成:葛亦民，圣人出来，第一个灭的就是他</FONT></A></P></DIV></TD></TR><TR align=middle>
 	<TD align=right width="18%" height="16"><DIV align=center><FONT size=2><IMG height=6 src="pic/dian.gif" width=4></FONT></DIV></TD>
 	<TD width="79%" height="16"><DIV align=left><FONT lang=ZH-CN face=宋体><P align=justify><A href="nszz/slzmy.htm" target=_blank><FONT color=#000000 size=2>圣龙之矛：一是葛亦民就是全国人民精神领袖</FONT></A></P></FONT></DIV></TD></TR><TR align=middle><TD align=right colSpan=2 height=23><FONT size=2></FONT></TD></TR></TBODY></TABLE></TD></TR></TBODY></TABLE></TD></TR><TR><TD vAlign=top align=middle>
-</TD></TR></TBODY></TABLE></div>
+</TD></TR><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- s -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2547640047"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></TBODY></TABLE></div>
 <div style="position:absolute; left:-1px; top:117px; width:1002px; height:638px; z-index:0; BACKGROUND-COLOR:">
 		<TABLE cellSpacing=0 cellPadding=0 width=900 border=0 height="16"><TBODY><TR>
 			<TD bgColor=#dee3ed height=16>
