--- a/xw2.html
+++ b/xw2.html
@@ -122,7 +122,8 @@
  <img border=0 src="pic/2dqq.jpg" > 	</span><p>
 
 		
-		<br><br><br><div><br><br><br><script>
+		<br><br><br><div><br><br><p>　</p><p>　</p>
+<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p><br><script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -130,7 +131,17 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script><br><br> 
+</script><br><br> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </div>
 </div>
