--- a/dxly/dxly2.htm
+++ b/dxly/dxly2.htm
@@ -198,7 +198,32 @@
 <p>郭迪&nbsp;&nbsp;&nbsp; 外文&nbsp;&nbsp;&nbsp; 八八</p>
 <p>翻过这本子，发现自己最无理由写什么，因为我甚至不知道你。</p>
 <p>下一季，如果迎面走过来你，我还能认出你吗？</p>
-<p>　</p>
+<p>　<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f38239c7d50e7f84a6ee8876da0304f7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+<br><br> 
+<script async 
+
+src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></scri
+
+pt>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></p>
 
 </body>
 
