--- a/dxly/wrw.htm
+++ b/dxly/wrw.htm
@@ -1,88 +1,88 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÎÒÈÏÎªÎÒÊÇÉç»á¿ÌÒâÊÔÁ¶µÄ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æˆ‘è®¤ä¸ºæˆ‘æ˜¯ç¤¾ä¼šåˆ»æ„è¯•ç‚¼çš„</title>
 </head>
 
 <body>
 
-<p>ÎÒÈÏÎªÎÒÊÇÉç»á¿ÌÒâÊÔÁ¶µÄ<br>
+<p>æˆ‘è®¤ä¸ºæˆ‘æ˜¯ç¤¾ä¼šåˆ»æ„è¯•ç‚¼çš„<br>
 <br>
 <br>
 <br>
 Free_Mason 9:35:41<br>
-¸ðÒàÃñ£¬ÎÒÊÇ¿´ÁËÄãÉñ¾­µÄ&nbsp;&nbsp;ÇëÎÊÄãµÄÃÎ¾³ÊÇÊ²Ã´¸Ð¾õ°¡??<br>
+è‘›äº¦æ°‘ï¼Œæˆ‘æ˜¯çœ‹äº†ä½ ç¥žç»çš„&nbsp;&nbsp;è¯·é—®ä½ çš„æ¢¦å¢ƒæ˜¯ä»€ä¹ˆæ„Ÿè§‰å•Š??<br>
 Free_Mason 9:35:52<br>
 &nbsp;&nbsp;<br>
-Éñ½Ì 9:36:11<br>
-ÒìÃÎ<br>
-Éñ½Ì 9:36:27<br>
-ÓëÉñ¹ØÁªµÄ<br>
+ç¥žæ•™ 9:36:11<br>
+å¼‚æ¢¦<br>
+ç¥žæ•™ 9:36:27<br>
+ä¸Žç¥žå…³è”çš„<br>
 Free_Mason 9:37:20<br>
-ÎÒÒ²ÓÐ¹ýÒìÃÎ µ«Ç°Ìì ÃÎ¼ûÄã¸øÎÒµÄ´ð¸´×ÜÊÇºÜÁýÍ³ ¿ÉÄÜÊÇ¶àÊÂ°É<br>
+æˆ‘ä¹Ÿæœ‰è¿‡å¼‚æ¢¦ ä½†å‰å¤© æ¢¦è§ä½ ç»™æˆ‘çš„ç­”å¤æ€»æ˜¯å¾ˆç¬¼ç»Ÿ å¯èƒ½æ˜¯å¤šäº‹å§<br>
 Free_Mason 9:37:49<br>
-¿ÉÒÔËµÏÂ¸Ð¾õÂð<br>
-Éñ½Ì 9:37:54<br>
-ºÇ£¬ÃÎµ½ÎÒÑ½<br>
-Éñ½Ì 9:38:07<br>
-ÄãËµÑ½<br>
+å¯ä»¥è¯´ä¸‹æ„Ÿè§‰å—<br>
+ç¥žæ•™ 9:37:54<br>
+å‘µï¼Œæ¢¦åˆ°æˆ‘å‘€<br>
+ç¥žæ•™ 9:38:07<br>
+ä½ è¯´å‘€<br>
 Free_Mason 9:39:19<br>
-àÅ ÆÕÍ¨ÃÎ ÎÒÔÚÒ»¸öÎÝ×ÓÀïÎÊÄã ÄÇÃÎµÄÄÚÈÝ È»ºóÄã´ð¸´ÎÒµÄºÍÉñ¾­ ÎÄÉÏµÄ²î²»¶à<br>
-Éñ½Ì 9:39:46<br>
-ÕâÃ´Ææ¹ÖÑ½<br>
-Éñ½Ì 9:40:05<br>
-ÊÇ²»ÊÇÏÈ¿´¹ýÉñ¾­£¬ÔÙÃÎµÄ£¿<br>
+å—¯ æ™®é€šæ¢¦ æˆ‘åœ¨ä¸€ä¸ªå±‹å­é‡Œé—®ä½  é‚£æ¢¦çš„å†…å®¹ ç„¶åŽä½ ç­”å¤æˆ‘çš„å’Œç¥žç» æ–‡ä¸Šçš„å·®ä¸å¤š<br>
+ç¥žæ•™ 9:39:46<br>
+è¿™ä¹ˆå¥‡æ€ªå‘€<br>
+ç¥žæ•™ 9:40:05<br>
+æ˜¯ä¸æ˜¯å…ˆçœ‹è¿‡ç¥žç»ï¼Œå†æ¢¦çš„ï¼Ÿ<br>
 Free_Mason 9:40:46<br>
-àÅàÅ<br>
+å—¯å—¯<br>
 Free_Mason 9:41:12<br>
-ÒòÎªÒÔÇ°ÎÒ×ö¹ýºÍÄãÏàËÆµÄÃÎ&nbsp; &nbsp;<br>
-Éñ½Ì 9:41:15<br>
-ºÇ£¬ÄãÍøÃûºÃ¹Ö<br>
-Éñ½Ì 9:41:52<br>
-°ÑÄãÒìÃÎÐ´³öÀ´£¬¿´¿´<br>
+å› ä¸ºä»¥å‰æˆ‘åšè¿‡å’Œä½ ç›¸ä¼¼çš„æ¢¦&nbsp; &nbsp;<br>
+ç¥žæ•™ 9:41:15<br>
+å‘µï¼Œä½ ç½‘åå¥½æ€ª<br>
+ç¥žæ•™ 9:41:52<br>
+æŠŠä½ å¼‚æ¢¦å†™å‡ºæ¥ï¼Œçœ‹çœ‹<br>
 Free_Mason 9:42:13<br>
-¶øÇÒÕö×ÅÑÛ¾¦ºÜÆæÒìµÄ¸Ð¾õ<br>
-Éñ½Ì 9:42:59<br>
-ÕâÊÇÇ¿ÁÒÖ¸ÏòÐÔµÄÃÎ£¬ÓÐÒâÒåµÄ<br>
+è€Œä¸”çç€çœ¼ç›å¾ˆå¥‡å¼‚çš„æ„Ÿè§‰<br>
+ç¥žæ•™ 9:42:59<br>
+è¿™æ˜¯å¼ºçƒˆæŒ‡å‘æ€§çš„æ¢¦ï¼Œæœ‰æ„ä¹‰çš„<br>
 Free_Mason 9:43:29<br>
-Äã¿ÉÒÔ½²Ò»ÏÂÄãËùÊÜµÄ¸Ð¾õÂð&nbsp;&nbsp;ÊÇ°²Ïé»¹ÊÇ¿Ö¾å<br>
-Éñ½Ì 9:44:05<br>
-µ±È»°²Ïê£¬¶øÇÒºÜÐÒ¸£<br>
+ä½ å¯ä»¥è®²ä¸€ä¸‹ä½ æ‰€å—çš„æ„Ÿè§‰å—&nbsp;&nbsp;æ˜¯å®‰ç¥¥è¿˜æ˜¯ææƒ§<br>
+ç¥žæ•™ 9:44:05<br>
+å½“ç„¶å®‰è¯¦ï¼Œè€Œä¸”å¾ˆå¹¸ç¦<br>
 Free_Mason 9:44:20<br>
-ÊÇµÄ µ«ÉñÊÇ¼ÉÐ°µÄ ÎÒÒ²³£´¥·¸¸¸Ç×ÂÉ·¨&nbsp;&nbsp;<br>
+æ˜¯çš„ ä½†ç¥žæ˜¯å¿Œé‚ªçš„ æˆ‘ä¹Ÿå¸¸è§¦çŠ¯çˆ¶äº²å¾‹æ³•&nbsp;&nbsp;<br>
 Free_Mason 9:44:26<br>
 &nbsp;&nbsp;<br>
-Éñ½Ì 9:44:28<br>
-ÓÐ³É¹¦µÄ¸Ð¾õ<br>
+ç¥žæ•™ 9:44:28<br>
+æœ‰æˆåŠŸçš„æ„Ÿè§‰<br>
 Free_Mason 9:44:35<br>
-ÎÒµÄºÜ¼¤¶¯<br>
-Éñ½Ì 9:44:49<br>
-Ò²¼¤¶¯<br>
-Éñ½Ì 9:45:03<br>
-ÉñÔÚÊÔÁ¶ÎÒÃÇ<br>
+æˆ‘çš„å¾ˆæ¿€åŠ¨<br>
+ç¥žæ•™ 9:44:49<br>
+ä¹Ÿæ¿€åŠ¨<br>
+ç¥žæ•™ 9:45:03<br>
+ç¥žåœ¨è¯•ç‚¼æˆ‘ä»¬<br>
 <br>
 <br>
 Free_Mason 9:45:09<br>
-¸øÄã½²½² ÎÒµÄ¸Ð¾õ°É&nbsp;&nbsp;<br>
-Éñ½Ì 9:45:47<br>
-ÎÒÃÇµ±È»ÓÐ²»×ã£¬ËùÒÔÒªÊÔÁ¶<br>
-Éñ½Ì 9:45:55<br>
-Äã½²<br>
+ç»™ä½ è®²è®² æˆ‘çš„æ„Ÿè§‰å§&nbsp;&nbsp;<br>
+ç¥žæ•™ 9:45:47<br>
+æˆ‘ä»¬å½“ç„¶æœ‰ä¸è¶³ï¼Œæ‰€ä»¥è¦è¯•ç‚¼<br>
+ç¥žæ•™ 9:45:55<br>
+ä½ è®²<br>
 Free_Mason 9:46:37<br>
-ÎÒµÄÑÛÕö×ÅÊ±£¬ÓÐÒ»ÖÖÉù²¨²»¶ÏÓ¿ÈëÄÔÖÐ£¬¶øÇÒ×Ô¼º·Ç³£¼¤¶¯£¨ÐÎÈÝ²»³öÀ´£©<br>
-Éñ½Ì 9:47:18<br>
-ÓÐÖÕÓÚ³É¹¦µÄ¸Ð¾õ<br>
+æˆ‘çš„çœ¼çç€æ—¶ï¼Œæœ‰ä¸€ç§å£°æ³¢ä¸æ–­æ¶Œå…¥è„‘ä¸­ï¼Œè€Œä¸”è‡ªå·±éžå¸¸æ¿€åŠ¨ï¼ˆå½¢å®¹ä¸å‡ºæ¥ï¼‰<br>
+ç¥žæ•™ 9:47:18<br>
+æœ‰ç»ˆäºŽæˆåŠŸçš„æ„Ÿè§‰<br>
 Free_Mason 9:48:05<br>
-Ö÷Ò®öÕÔçÖªµÀÄÇÊ±ÓÐºÜ¶àÈËÃ°³ä ºÍ¼ÙÏÈÖª ËùÒÔ°¡ ÎÒ²»¸Ò³ÆÊ¥ÈË<br>
-Éñ½Ì 9:49:33<br>
-Ê¥ÈËÕâ¸ö£¬¿ÉÒÔºÜ¶à£¬±»Ñ¡µÄ£¬»¹ÓÐÉç»áÊÔÁ¶£¬µ«ÓÐ¸ö×î³É¹¦µÄÈË£¬¼´ÌØÒâÊÔÁ¶<br>
+ä¸»è€¶ç¨£æ—©çŸ¥é“é‚£æ—¶æœ‰å¾ˆå¤šäººå†’å…… å’Œå‡å…ˆçŸ¥ æ‰€ä»¥å•Š æˆ‘ä¸æ•¢ç§°åœ£äºº<br>
+ç¥žæ•™ 9:49:33<br>
+åœ£äººè¿™ä¸ªï¼Œå¯ä»¥å¾ˆå¤šï¼Œè¢«é€‰çš„ï¼Œè¿˜æœ‰ç¤¾ä¼šè¯•ç‚¼ï¼Œä½†æœ‰ä¸ªæœ€æˆåŠŸçš„äººï¼Œå³ç‰¹æ„è¯•ç‚¼<br>
 Free_Mason 9:51:29<br>
-ÄãÊÇÏÈÖª»¹ÊÇ¡­<br>
-Éñ½Ì 9:52:07<br>
-ÎÒÈÏÎªÎÒÊÇÉç»á¿ÌÒâÊÔÁ¶µÄ<br>
-Éñ½Ì 9:52:26<br>
-2019Ó¦ÓÐ·ÖÏþ<span style="DISPLAY: none">&nbsp;</span></p>
+ä½ æ˜¯å…ˆçŸ¥è¿˜æ˜¯â€¦<br>
+ç¥žæ•™ 9:52:07<br>
+æˆ‘è®¤ä¸ºæˆ‘æ˜¯ç¤¾ä¼šåˆ»æ„è¯•ç‚¼çš„<br>
+ç¥žæ•™ 9:52:26<br>
+2019åº”æœ‰åˆ†æ™“<span style="DISPLAY: none">&nbsp;</span></p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
