--- a/fygc/gymfk.htm
+++ b/fygc/gymfk.htm
@@ -2,36 +2,36 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ø¸ğÒàÃñ¸¶¿î</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç»™è‘›äº¦æ°‘ä»˜æ¬¾</title>
 </head>
 
 <body leftmargin="250" rightmargin="250">
 
-<p>¡¡</p>
-<p><font size="5">¸ø¸ğÒàÃñ¸¶¿î</font></p>
+<p>ã€€</p>
+<p><font size="5">ç»™è‘›äº¦æ°‘ä»˜æ¬¾</font></p>
 <p><font size="4"><br>
 <br>
 <br>
-ÁªÏµ·½Ê½£º ¸ğÒàÃñ<br><br>
-&nbsp;ÊÖ»ú£º13952819473<br>
-&nbsp;Î¢ĞÅ£º13952819473<br>
-Ö§¸¶±¦£º13952819473
+è”ç³»æ–¹å¼ï¼š è‘›äº¦æ°‘<br><br>
+&nbsp;æ‰‹æœºï¼š13952819473<br>
+&nbsp;å¾®ä¿¡ï¼š13952819473<br>
+æ”¯ä»˜å®ï¼š13952819473
 
 <br>
-ÓÊÏä£ºsejeme@163.com<br>
+é‚®ç®±ï¼šsejeme@163.com<br>
 &nbsp;
-QQ£º50914333</font><br>
+QQï¼š50914333</font><br>
 
 </p>
 
 <br>
 <span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-»ã¿îÕËºÅ£ºÓÊÕş¿¨ºÅ 6221 8831 4000 1998 345 ¸ğÒàÃñ ¿ª»§ĞĞ£º½­ËÕÕò½­ÊĞÃÎÏªÂ·Ö§ĞĞ
+æ±‡æ¬¾è´¦å·ï¼šé‚®æ”¿å¡å· 6221 8831 4000 1998 345 è‘›äº¦æ°‘ å¼€æˆ·è¡Œï¼šæ±Ÿè‹é•‡æ±Ÿå¸‚æ¢¦æºªè·¯æ”¯è¡Œ
 </font></p>
-<p>¡¡</p>
+<p>ã€€</p>
 <p><IMG SRC="../pic/zfbgeyimin.jpg" alt="beautiful lady" align="left" border=0> 
-<IMG SRC="../pic/wxgeyimin.jpg" alt="beautiful lady" align="right" border=0>¡¡</p><script>
+<IMG SRC="../pic/wxgeyimin.jpg" alt="beautiful lady" align="right" border=0>ã€€</p><script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -40,7 +40,19 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-
+<p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 </body>
 
 </html>
