--- a/fygc/rgnm.htm
+++ b/fygc/rgnm.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñ£ºÈç¹ûÄãÃÇÊÇÈË</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ï¼šå¦‚æžœä½ ä»¬æ˜¯äºº</title>
 </head>
 
 <body>
@@ -16,14 +16,14 @@
 					<div class="postmessage defaultpost">
 						<div id="postmessage_440" class="t_msgfont">
 							<div id="firstpost">
-								¸ðÒàÃñ£ºÈç¹ûÄãÃÇÊÇÈË<br>
+								è‘›äº¦æ°‘ï¼šå¦‚æžœä½ ä»¬æ˜¯äºº<br>
 								<br>
 								<br>
 								<br>
-								Èç¹ûÄãÃÇÊÇÈË£¬<br>
-								ÎÒ¾ÍÊÇÉñ¡£<br>
-								Èç¹ûÎÒÊÇÈË£¬<br>
-								ÄãÃÇ¾ÍÊÇÐóÉü¡£</div>
+								å¦‚æžœä½ ä»¬æ˜¯äººï¼Œ<br>
+								æˆ‘å°±æ˜¯ç¥žã€‚<br>
+								å¦‚æžœæˆ‘æ˜¯äººï¼Œ<br>
+								ä½ ä»¬å°±æ˜¯ç•œç‰²ã€‚</div>
 <SCRIPT type=text/javascript>var tagarray = [''];var tagencarray = [''];parsetag();</SCRIPT>
 						</div>
 					</div>
@@ -32,7 +32,8 @@
 			</table>
 		</div>
 	</form>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
