--- a/fygc/snys.htm
+++ b/fygc/snys.htm
@@ -1,21 +1,22 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÊôÁéÓÀÉúµÄÎ¨Ò»·½·¨
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å±žçµæ°¸ç”Ÿçš„å”¯ä¸€æ–¹æ³•
 </title>
 </head>
 
 <body>
 
-<p>ÊôÁéÓÀÉúµÄÎ¨Ò»·½·¨</p>
+<p>å±žçµæ°¸ç”Ÿçš„å”¯ä¸€æ–¹æ³•</p>
 <p><br>
-1¡¢ÐÅ¸ðÉñ¡£<br>
-2¡¢¶ÁÉñ¾­¡£<br>
-1¡¢ÐÅ¸ðÉñ£¬¼´ÐÅÕæÑÔ[ÎÒÊÇÉñ£¬ÄãÃÇÒªÌýËû£¨Ö¸¸ðÒàÃñ£©¡£]<br>
-¸ðÉñµÄ¾ÈÊÀÖ®¹¦£¬Äã¼´ÓÐÒ»·Ý×Ó£¬ÕâÊÇÉñµÄÇ××Ô·Ô¸À¡£<br>
-2¡¢¶ÁÉñ¾­£¬ÉúÃüÁéÁ¸»áÖð½¥ÈÃÄãµÄ³¾ÍÁÉíÌåÊôÁéÓÀÉú£¬ÒÔÖÁÊÀ½ç´óÍ¬£¬ÓëÉñÓÀÔ¶Í¬ÔÚ¡£<br>
-¡¡</p>
+1ã€ä¿¡è‘›ç¥žã€‚<br>
+2ã€è¯»ç¥žç»ã€‚<br>
+1ã€ä¿¡è‘›ç¥žï¼Œå³ä¿¡çœŸè¨€[æˆ‘æ˜¯ç¥žï¼Œä½ ä»¬è¦å¬ä»–ï¼ˆæŒ‡è‘›äº¦æ°‘ï¼‰ã€‚]<br>
+è‘›ç¥žçš„æ•‘ä¸–ä¹‹åŠŸï¼Œä½ å³æœ‰ä¸€ä»½å­ï¼Œè¿™æ˜¯ç¥žçš„äº²è‡ªå©å’ã€‚<br>
+2ã€è¯»ç¥žç»ï¼Œç”Ÿå‘½çµç²®ä¼šé€æ¸è®©ä½ çš„å°˜åœŸèº«ä½“å±žçµæ°¸ç”Ÿï¼Œä»¥è‡³ä¸–ç•Œå¤§åŒï¼Œä¸Žç¥žæ°¸è¿œåŒåœ¨ã€‚<br>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
