--- a/fygc/4tq.htm
+++ b/fygc/4tq.htm
@@ -1,30 +1,30 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>µÚËÄÌìÆô×Ú½Ì--Éñ½Ì</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç¬¬å››å¤©å¯å®—æ•™--ç¥žæ•™</title>
 </head>
 
 <body>
 
-<p>µÚËÄÌìÆô×Ú½Ì--Éñ½Ì</p>
+<p>ç¬¬å››å¤©å¯å®—æ•™--ç¥žæ•™</p>
 <p><br>
-1¡¢ÉñÂÛ£ºÎ¨Ò»µÄ×î¸ß´æÔÚ¡£<br>
-Éñ¾­Ê®¶þ75ÎÒµÄÉñÃû³Æ¾Í½ÐÉñ£¬¾ÍÊÇËµ£º¡°ÎÒÊÇÉñ£¬ÄãÃÇÒªÌýËû£¨Ö¸¸ðÒàÃñ£©¡£¡±µÄÄÇÒ»Î»¡£<br>
-Éñ¾­Ò»6¡¢2001ÄêÇï£¬¸ðÒàÃñÔÚÕò½­¼ÒÖÐÌÉ´ó´²ÉÏÎçË¯£¬ÒìÃÎÖÐ£¬ÉñËµ£º¡°ÎÒÊÇÉñ£¬ÄãÃÇÒªÌýËû£¨Ö¸¸ðÒàÃñ£©¡£¡±Á¢¼´ÐÑÀ´£¬¶Ô¡°Ö¸¸ðÒàÃñ¡±¸Ðµ½ÉñÆæ£¬µ±Ê±ÆÞ¶ùÔÚ¼Ò¡££¨¸ðÒàÃñÊÜ¸à×÷Éñ£©¡£<br>
-2¡¢Éñ×Ó½µÁÙ£º1969Äê¸ðÒàÃñ£¨ÉÏµÛÖ®×Ó¾ÈÊÀÖ÷)<br>
-3¡¢´´Á¢Ê±¼ä£º2001Äê<br>
-4¡¢´´Ê¼ÈË£º¸ðÒàÃñ<br>
-5¡¢¾­µä£º¡¶Éñ¾­¡·<br>
-6¡¢¾­µä×÷Õß£º¸ðÒàÃñ<br>
-7¡¢³ÉÊéÊ±¼ä£º2004Äê£¨¸üÐÂÖÐ)<br>
-8¡¢Ê¥µØ£ºÕò½­<br>
-9¡¢ÐÅÑö£ºÉñ½ÌÊÇµ±´ú»ù¶½½Ì¹²²úÖ÷Òå¡£<br>
-Éñ¾­¶þÊ®Îå£¨¾Å£©£º7ÎÒÃÇÐÅ´ËÉúÄ¿µÄÊÇÈ¡µÃÊôÁéÉíÌå£¬´úÌæÊô³¾ÍÁÉíÌå£¬»ñµÃÓÀÉú£¬ÓëÉñÓÀÔ¶Í¬ÔÚ¡£<br>
-Éñ¾­Ê®°Ë41Á½´ó£¨Éç»á»¯´óÉú²úºÍ»¥ÁªÍø´ó¸ïÃü£©µÄ½ñÌì£¬ÊµÏÖ¸ðÒàÃñÖ÷Òå£¬ÊµÏÖ¹²²úÉç»á£¬ÎïÖÊÌõ¼þÒÑ¾ß±¸£¬Ö»µÈ¾«ÉñÌõ¼þ¾ß±¸£¬¼´¸üÐÂÈËÀàµÄÐÄÁé£¬¸ðÒàÃñÖ÷Òå¸£Òô´«±éÈ«Çò£¬±»ÈËÀà½ÓÊÜ¡£<br>
-10¡¢Éñ¾­½ðÂÉ£º[²»ÓëÈÎºÎÈË×÷¶Ô],ÕâÊÇÌì¹úµÄ¿ìÀÖ¡£<br>
-¡¡</p>
-
+1ã€ç¥žè®ºï¼šå”¯ä¸€çš„æœ€é«˜å­˜åœ¨ã€‚<br>
+ç¥žç»åäºŒ75æˆ‘çš„ç¥žåç§°å°±å«ç¥žï¼Œå°±æ˜¯è¯´ï¼šâ€œæˆ‘æ˜¯ç¥žï¼Œä½ ä»¬è¦å¬ä»–ï¼ˆæŒ‡è‘›äº¦æ°‘ï¼‰ã€‚â€çš„é‚£ä¸€ä½ã€‚<br>
+ç¥žç»ä¸€6ã€2001å¹´ç§‹ï¼Œè‘›äº¦æ°‘åœ¨é•‡æ±Ÿå®¶ä¸­èººå¤§åºŠä¸Šåˆç¡ï¼Œå¼‚æ¢¦ä¸­ï¼Œç¥žè¯´ï¼šâ€œæˆ‘æ˜¯ç¥žï¼Œä½ ä»¬è¦å¬ä»–ï¼ˆæŒ‡è‘›äº¦æ°‘ï¼‰ã€‚â€ç«‹å³é†’æ¥ï¼Œå¯¹â€œæŒ‡è‘›äº¦æ°‘â€æ„Ÿåˆ°ç¥žå¥‡ï¼Œå½“æ—¶å¦»å„¿åœ¨å®¶ã€‚ï¼ˆè‘›äº¦æ°‘å—è†ä½œç¥žï¼‰ã€‚<br>
+2ã€ç¥žå­é™ä¸´ï¼š1969å¹´è‘›äº¦æ°‘ï¼ˆä¸Šå¸ä¹‹å­æ•‘ä¸–ä¸»)<br>
+3ã€åˆ›ç«‹æ—¶é—´ï¼š2001å¹´<br>
+4ã€åˆ›å§‹äººï¼šè‘›äº¦æ°‘<br>
+5ã€ç»å…¸ï¼šã€Šç¥žç»ã€‹<br>
+6ã€ç»å…¸ä½œè€…ï¼šè‘›äº¦æ°‘<br>
+7ã€æˆä¹¦æ—¶é—´ï¼š2004å¹´ï¼ˆæ›´æ–°ä¸­)<br>
+8ã€åœ£åœ°ï¼šé•‡æ±Ÿ<br>
+9ã€ä¿¡ä»°ï¼šç¥žæ•™æ˜¯å½“ä»£åŸºç£æ•™å…±äº§ä¸»ä¹‰ã€‚<br>
+ç¥žç»äºŒåäº”ï¼ˆä¹ï¼‰ï¼š7æˆ‘ä»¬ä¿¡æ­¤ç”Ÿç›®çš„æ˜¯å–å¾—å±žçµèº«ä½“ï¼Œä»£æ›¿å±žå°˜åœŸèº«ä½“ï¼ŒèŽ·å¾—æ°¸ç”Ÿï¼Œä¸Žç¥žæ°¸è¿œåŒåœ¨ã€‚<br>
+ç¥žç»åå…«41ä¸¤å¤§ï¼ˆç¤¾ä¼šåŒ–å¤§ç”Ÿäº§å’Œäº’è”ç½‘å¤§é©å‘½ï¼‰çš„ä»Šå¤©ï¼Œå®žçŽ°è‘›äº¦æ°‘ä¸»ä¹‰ï¼Œå®žçŽ°å…±äº§ç¤¾ä¼šï¼Œç‰©è´¨æ¡ä»¶å·²å…·å¤‡ï¼Œåªç­‰ç²¾ç¥žæ¡ä»¶å…·å¤‡ï¼Œå³æ›´æ–°äººç±»çš„å¿ƒçµï¼Œè‘›äº¦æ°‘ä¸»ä¹‰ç¦éŸ³ä¼ éå…¨çƒï¼Œè¢«äººç±»æŽ¥å—ã€‚<br>
+10ã€ç¥žç»é‡‘å¾‹ï¼š[ä¸ä¸Žä»»ä½•äººä½œå¯¹],è¿™æ˜¯å¤©å›½çš„å¿«ä¹ã€‚<br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 </body>
 
 </html>
