--- a/fygc/ggdnh.htm
+++ b/fygc/ggdnh.htm
@@ -1,27 +1,27 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¹Ô¹ÔµÄÄÅº°£º×î½ü¸ðÒàÃñµÈÈË¶¼·ÅÆúÁË×ÏÎ¢ÃÎ£¡</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä¹–ä¹–çš„å‘å–Šï¼šæœ€è¿‘è‘›äº¦æ°‘ç­‰äººéƒ½æ”¾å¼ƒäº†ç´«å¾®æ¢¦ï¼</title>
 </head>
 
 <body>
 
-<p>¹Ô¹ÔµÄÄÅº°£º×î½ü¸ðÒàÃñµÈÈË¶¼·ÅÆúÁË×ÏÎ¢ÃÎ£¡<br>
+<p>ä¹–ä¹–çš„å‘å–Šï¼šæœ€è¿‘è‘›äº¦æ°‘ç­‰äººéƒ½æ”¾å¼ƒäº†ç´«å¾®æ¢¦ï¼<br>
 <br>
 <br>
-Ôç¾Í¸Ã·ÅÆúÁË£¡<br>
+æ—©å°±è¯¥æ”¾å¼ƒäº†ï¼<br>
 <br>
-²»¹ý×ÜÌåÀ´Ëµ£¬¸ðÒàÃñ±ÈÆðÊ¥°ÉÄÇÐ©Ïëµ±×ÏÎ¢È´ÓÖË¼¿¼¸öÈË°²Î£µÄµ¨Ð¡ÈçÊóµÄ×öÃÎÕßÇ¿¹ý°Ù±¶£¡<br>
+ä¸è¿‡æ€»ä½“æ¥è¯´ï¼Œè‘›äº¦æ°‘æ¯”èµ·åœ£å§é‚£äº›æƒ³å½“ç´«å¾®å´åˆæ€è€ƒä¸ªäººå®‰å±çš„èƒ†å°å¦‚é¼ çš„åšæ¢¦è€…å¼ºè¿‡ç™¾å€ï¼<br>
 <br>
-ÆðÂëËû¸ÒÓÚ³ÐÈÏ×Ô¼ºµÄÏë·¨£¡¿´¿´Ê¥°ÉÄÇÐ©µ¨Ð¡ÈçÊóµÄ×öÃÎÕß¾õµÃËüÃÇÊÇÄÇÃ´µÄ¿É±¯ÓÖ¿ÉÁ¯£¡<br>
+èµ·ç ä»–æ•¢äºŽæ‰¿è®¤è‡ªå·±çš„æƒ³æ³•ï¼çœ‹çœ‹åœ£å§é‚£äº›èƒ†å°å¦‚é¼ çš„åšæ¢¦è€…è§‰å¾—å®ƒä»¬æ˜¯é‚£ä¹ˆçš„å¯æ‚²åˆå¯æ€œï¼<br>
 <br>
-ÄÇÃ´µ¨Ð¡ÈçÊó»¹×öÃÎµ±µÛÍõ¡£¡£¡£ºÇºÇ£¡Ãæ¶ÔÖÚ¶àµÄÕâÖÖÈËÖ»ÄÜÓÃÄÔ²ÐÀ´ÐÎÈÝËüÃÇ×îÎªÇ¡µ±£¡<br>
+é‚£ä¹ˆèƒ†å°å¦‚é¼ è¿˜åšæ¢¦å½“å¸çŽ‹ã€‚ã€‚ã€‚å‘µå‘µï¼é¢å¯¹ä¼—å¤šçš„è¿™ç§äººåªèƒ½ç”¨è„‘æ®‹æ¥å½¢å®¹å®ƒä»¬æœ€ä¸ºæ°å½“ï¼<br>
 <br>
 <br>
-&gt;ÄÇÀïµÃµ½µÄÏûÏ¢<br>
-&gt;Ã»ÓÐ·ÅÆú</p>
-
+&gt;é‚£é‡Œå¾—åˆ°çš„æ¶ˆæ¯<br>
+&gt;æ²¡æœ‰æ”¾å¼ƒ</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 </body>
 
 </html>
