--- a/fygc/hygd.htm
+++ b/fygc/hygd.htm
@@ -1,17 +1,18 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>»áÓÐ¸ü¶àµÄÈËÈÏÍ¬ÄãÃÇ¼Ò×ÏÎ¢¸ðÒàÃñ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä¼šæœ‰æ›´å¤šçš„äººè®¤åŒä½ ä»¬å®¶ç´«å¾®è‘›äº¦æ°‘</title>
 </head>
 
 <body>
 
-<p>»áÓÐ¸ü¶àµÄÈËÈÏÍ¬ÄãÃÇ¼Ò×ÏÎ¢¸ðÒàÃñ<br>
+<p>ä¼šæœ‰æ›´å¤šçš„äººè®¤åŒä½ ä»¬å®¶ç´«å¾®è‘›äº¦æ°‘<br>
 <br>
 <br>
 <br>
-ÎÒËµÐÖµÜ£¬µÈÄãµÄ¸ð´óÉñ°ÑÕâÐ©³éÏñµÄ¶«Î÷ÐÎÏó»¯£¬½¨Á¢Ò»¸öËùÓÐÈË¶¼ÄÜ¡°Àí½â¡±µÄÇÅÁº£¬¶ø²»ÊÇÓÃ¾³½çÕâÑùÐé»ÃµÄ´ÊÓïÔÚ±ðÈË´óÄÔÆ¾¿ÕÉú³ÉÒ»¸öÂß¼­ÌåÏµ¡£»áÓÐ¸ü¶àµÄÈËÈÏÍ¬ÄãÃÇ¼Ò×ÏÎ¢¡£</p>
+æˆ‘è¯´å…„å¼Ÿï¼Œç­‰ä½ çš„è‘›å¤§ç¥žæŠŠè¿™äº›æŠ½åƒçš„ä¸œè¥¿å½¢è±¡åŒ–ï¼Œå»ºç«‹ä¸€ä¸ªæ‰€æœ‰äººéƒ½èƒ½â€œç†è§£â€çš„æ¡¥æ¢ï¼Œè€Œä¸æ˜¯ç”¨å¢ƒç•Œè¿™æ ·è™šå¹»çš„è¯è¯­åœ¨åˆ«äººå¤§è„‘å‡­ç©ºç”Ÿæˆä¸€ä¸ªé€»è¾‘ä½“ç³»ã€‚ä¼šæœ‰æ›´å¤šçš„äººè®¤åŒä½ ä»¬å®¶ç´«å¾®ã€‚</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
