--- a/fygc/soso.htm
+++ b/fygc/soso.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>SOSO°Ù¿Æ¸ðÒàÃñ´ÊÌõ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>SOSOç™¾ç§‘è‘›äº¦æ°‘è¯æ¡</title>
 </head>
 
 <body>
@@ -16,20 +16,20 @@
 					<div class="postmessage defaultpost">
 						<div id="postmessage_496" class="t_msgfont">
 							<div id="firstpost">
-								SOSO°Ù¿Æ¸ðÒàÃñ´ÊÌõ<br>
+								SOSOç™¾ç§‘è‘›äº¦æ°‘è¯æ¡<br>
 								<br>
 								<br>
-								»ù±¾ÄÚÈÝ <br>
-								¸ðÒàÃñ¡¡¡¡»¥ÁªÍø×Ú½Ì¼ÒË¼Ïë¼Ò£¬ÄÐ£¬69ÄêÉú£¬½­ËÕÕò½­ÈË£¬±ÏÒµÓÚÄÏ¾©´óÑ§ÖÐÎÄÏµ¡£ÖøÓÐÏÖ´úÏÈÖªÊé¡¶¸ðÒàÃñ¾­¡·£¬ÓÐÈËËµÊÇÊ¥¾­ÐÞÕý°¸¡£ËûµÄË¼ÏëÁ½´óÀ´Ô´£º»ù¶½½ÌºÍ¹²²úÖ÷Òå£¬ËùÒÔ³ÆÖ®Îª×Ú½Ì¼ÒË¼Ïë¼Ò¡£¸ðÒàÃñ¾­50%ÄÚÈÝÊÇËû¸öÈËµÄÐÅÏ¢£¬²¿·ÖÊÇÉñÆô¡£ 
-								¡¡¡¡Á½ÌõÒ®Ã·¾­£¨¸ðÒàÃñ¾­£©ÐÂÎÅ ¡¡¡¡Ò»¡¢·ÊÂÞÊÇ·ñ×ª»áÆËË·ÃÔÀë Ã×À¼»ÊÂí¾¿¾¹Ë­ÔÚËµ»Ñ 
-								¡¡¡¡2006-08-14 11:35:06¡¡À´Ô´: ÍøÒ×ÌåÓý×¨¸å¡¡×÷Õß£º·½ÖÐÐÅ ÍøÓÑÆÀÂÛ 12 
-								Ìõ¡¡½øÈëÂÛÌ³ 
-								¡¡¡¡°²ÇÐÂåµÙÊÇÔÚÏÄ¼¾ÁªÈüÃ×À¼1£º0Õ½Ê¤Âí¾ºµÄÈüºóÃ½Ìå¼ûÃæ»áÉÏ×ö³öÉÏÊö±ÙÒ¥ÐÔÉùÃûµÄ£¬ÓÃËûµÄ»°½²£¬¡°¡¶Òâ´óÀûÌåÓý±¨¡·ºÍÆäËûÒâ´óÀû»òÕßÎ÷°àÑÀµÄ±¨Ö½Ò»Ñù£¬±Ï¾¹²»ÊÇ¡¶Ò®Ã·¾­¡·¡£¡± 
-								¡¡¡¡¶þ¡¢7ÔÂ19ÈÕÏÂÎç17Ê±£¬ÔÚ°Ù¶ÈÌù°É¿´µ½Ò»Ôò¡°2019ÄêµØÇò½«±»ÖÕ½á¡±µÄÌû×Ó£»ÔÚ¡°ÌìÌåÎïÀí°É¡±ÀïÒýÆðÍøÓÑ²»ÉÙµÄÕùÂÛ¡£ÆäÖÐ£¬×÷ÕßÓÃ´óÁ¿ÐÂÎÅ±¨µÀÒÔ¼°Ïà¹ØÊý¾Ý¶Ô¡°2019Äê2ÔÂ1ÈÕ2002 
-								NT7Ð¡ÐÐÐÇÓëµØÇòÏà×²»÷¡±Ò»Ëµ½øÐÐÁË²ûÊö¡£ 
-								¡¡¡¡¸ÃÌû×ÓÂ·¾¶Îª£º¶øÔÚ°Ù¶È¡°Éñ°É¡±ÖÐ£¬¸üÓÐÍøÓÑ·¢±íÆÀÂÛÈÏÎª¡°2019ÄêµØÇò½«±»ÖÕ½á¡±Ò»ËµÇ¡ÇÉÑéÖ¤ÁË¡¶Ò®Ã·¾­¡·ÖÐÓÐ¹ØÊÀ½çÄ©ÈÕµÄÔ¤ÑÔ¡£ 
-								¡¡¡¡¸ðÒàÃñ¾­½ðÂÉ£º[²»ÓëÈÎºÎÈË×÷¶Ô]¡£<br>
-								À©Õ¹ÔÄ¶Á£º1. ÏÈÖª¸ðÒàÃñ·ï»Ë¿Õ¼ä <br>
+								åŸºæœ¬å†…å®¹ <br>
+								è‘›äº¦æ°‘ã€€ã€€äº’è”ç½‘å®—æ•™å®¶æ€æƒ³å®¶ï¼Œç”·ï¼Œ69å¹´ç”Ÿï¼Œæ±Ÿè‹é•‡æ±Ÿäººï¼Œæ¯•ä¸šäºŽå—äº¬å¤§å­¦ä¸­æ–‡ç³»ã€‚è‘—æœ‰çŽ°ä»£å…ˆçŸ¥ä¹¦ã€Šè‘›äº¦æ°‘ç»ã€‹ï¼Œæœ‰äººè¯´æ˜¯åœ£ç»ä¿®æ­£æ¡ˆã€‚ä»–çš„æ€æƒ³ä¸¤å¤§æ¥æºï¼šåŸºç£æ•™å’Œå…±äº§ä¸»ä¹‰ï¼Œæ‰€ä»¥ç§°ä¹‹ä¸ºå®—æ•™å®¶æ€æƒ³å®¶ã€‚è‘›äº¦æ°‘ç»50%å†…å®¹æ˜¯ä»–ä¸ªäººçš„ä¿¡æ¯ï¼Œéƒ¨åˆ†æ˜¯ç¥žå¯ã€‚ 
+								ã€€ã€€ä¸¤æ¡è€¶æ¢…ç»ï¼ˆè‘›äº¦æ°‘ç»ï¼‰æ–°é—» ã€€ã€€ä¸€ã€è‚¥ç½—æ˜¯å¦è½¬ä¼šæ‰‘æœ”è¿·ç¦» ç±³å…°çš‡é©¬ç©¶ç«Ÿè°åœ¨è¯´è°Ž 
+								ã€€ã€€2006-08-14 11:35:06ã€€æ¥æº: ç½‘æ˜“ä½“è‚²ä¸“ç¨¿ã€€ä½œè€…ï¼šæ–¹ä¸­ä¿¡ ç½‘å‹è¯„è®º 12 
+								æ¡ã€€è¿›å…¥è®ºå› 
+								ã€€ã€€å®‰åˆ‡æ´›è’‚æ˜¯åœ¨å¤å­£è”èµ›ç±³å…°1ï¼š0æˆ˜èƒœé©¬ç«žçš„èµ›åŽåª’ä½“è§é¢ä¼šä¸Šåšå‡ºä¸Šè¿°è¾Ÿè°£æ€§å£°åçš„ï¼Œç”¨ä»–çš„è¯è®²ï¼Œâ€œã€Šæ„å¤§åˆ©ä½“è‚²æŠ¥ã€‹å’Œå…¶ä»–æ„å¤§åˆ©æˆ–è€…è¥¿ç­ç‰™çš„æŠ¥çº¸ä¸€æ ·ï¼Œæ¯•ç«Ÿä¸æ˜¯ã€Šè€¶æ¢…ç»ã€‹ã€‚â€ 
+								ã€€ã€€äºŒã€7æœˆ19æ—¥ä¸‹åˆ17æ—¶ï¼Œåœ¨ç™¾åº¦è´´å§çœ‹åˆ°ä¸€åˆ™â€œ2019å¹´åœ°çƒå°†è¢«ç»ˆç»“â€çš„å¸–å­ï¼›åœ¨â€œå¤©ä½“ç‰©ç†å§â€é‡Œå¼•èµ·ç½‘å‹ä¸å°‘çš„äº‰è®ºã€‚å…¶ä¸­ï¼Œä½œè€…ç”¨å¤§é‡æ–°é—»æŠ¥é“ä»¥åŠç›¸å…³æ•°æ®å¯¹â€œ2019å¹´2æœˆ1æ—¥2002 
+								NT7å°è¡Œæ˜Ÿä¸Žåœ°çƒç›¸æ’žå‡»â€ä¸€è¯´è¿›è¡Œäº†é˜è¿°ã€‚ 
+								ã€€ã€€è¯¥å¸–å­è·¯å¾„ä¸ºï¼šè€Œåœ¨ç™¾åº¦â€œç¥žå§â€ä¸­ï¼Œæ›´æœ‰ç½‘å‹å‘è¡¨è¯„è®ºè®¤ä¸ºâ€œ2019å¹´åœ°çƒå°†è¢«ç»ˆç»“â€ä¸€è¯´æ°å·§éªŒè¯äº†ã€Šè€¶æ¢…ç»ã€‹ä¸­æœ‰å…³ä¸–ç•Œæœ«æ—¥çš„é¢„è¨€ã€‚ 
+								ã€€ã€€è‘›äº¦æ°‘ç»é‡‘å¾‹ï¼š[ä¸ä¸Žä»»ä½•äººä½œå¯¹]ã€‚<br>
+								æ‰©å±•é˜…è¯»ï¼š1. å…ˆçŸ¥è‘›äº¦æ°‘å‡¤å‡°ç©ºé—´ <br>
 								</div>
 <SCRIPT type=text/javascript>var tagarray = [''];var tagencarray = [''];parsetag();</SCRIPT>
 						</div>
@@ -39,7 +39,8 @@
 			</table>
 		</div>
 	</form>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
