--- a/fygc/wgsd.htm
+++ b/fygc/wgsd.htm
@@ -1,24 +1,25 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÎÒ¸æËß´ó¼ÒÒ»¸öÃØÃÜ:¸ðÒàÃñµÄÊ¦¸µ£¬¾ÍÊÇÎÞÌì¡£</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æˆ‘å‘Šè¯‰å¤§å®¶ä¸€ä¸ªç§˜å¯†:è‘›äº¦æ°‘çš„å¸ˆå‚…ï¼Œå°±æ˜¯æ— å¤©ã€‚</title>
 </head>
 
 <body>
 
-<p>ÎÒ¸æËß´ó¼ÒÒ»¸öÃØÃÜ:¸ðÒàÃñµÄÊ¦¸µ£¬¾ÍÊÇÎÞÌì¡£<br>
+<p>æˆ‘å‘Šè¯‰å¤§å®¶ä¸€ä¸ªç§˜å¯†:è‘›äº¦æ°‘çš„å¸ˆå‚…ï¼Œå°±æ˜¯æ— å¤©ã€‚<br>
 <br>
 <br>
-¾ÍÊÇÄ¿ÖÐÎÞÈË£¬Ò»Ò¶ÕÏÄ¿£¬ÎÞ·¨ÎÞÌìµÄÎÞÌì¡£<br>
+å°±æ˜¯ç›®ä¸­æ— äººï¼Œä¸€å¶éšœç›®ï¼Œæ— æ³•æ— å¤©çš„æ— å¤©ã€‚<br>
 <br>
 <br>
-¸ðÒàÃñ:¶ÀÃÅ¾ø¼¼:×ß»ðÈëÄ§£¬¸ú×ÅËûµÄ×îÖÕÄ¿µÄµØ£¬ÓÐ¿ÉÄÜÊÇ¼àÓü£¬ÓÐ¿ÉÄÜÊÇÒ½Ôº¡£<br>
+è‘›äº¦æ°‘:ç‹¬é—¨ç»æŠ€:èµ°ç«å…¥é­”ï¼Œè·Ÿç€ä»–çš„æœ€ç»ˆç›®çš„åœ°ï¼Œæœ‰å¯èƒ½æ˜¯ç›‘ç‹±ï¼Œæœ‰å¯èƒ½æ˜¯åŒ»é™¢ã€‚<br>
 <br>
 <br>
-ËûµÄÊ¦¸µÎÞÌìÎªÊ²Ã´Ã»³öÀ´£¿¾ÍÒòÎªÊ±ºòÃ»µ½£¬Èç¹ûÓÐË­ÏëÖªµÀËûµÄÊ¦¸µºÎÊ±³öÉ½£¬ÄÇÃ´£¬È¥ÎÊ¸ðÒàÃñ£¬<br>
+ä»–çš„å¸ˆå‚…æ— å¤©ä¸ºä»€ä¹ˆæ²¡å‡ºæ¥ï¼Ÿå°±å› ä¸ºæ—¶å€™æ²¡åˆ°ï¼Œå¦‚æžœæœ‰è°æƒ³çŸ¥é“ä»–çš„å¸ˆå‚…ä½•æ—¶å‡ºå±±ï¼Œé‚£ä¹ˆï¼ŒåŽ»é—®è‘›äº¦æ°‘ï¼Œ<br>
 <br>
-Ëû»á¸æËßÄãµÄ¡£</p>
+ä»–ä¼šå‘Šè¯‰ä½ çš„ã€‚</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
