--- a/fygc/wgzt.htm
+++ b/fygc/wgzt.htm
@@ -1,18 +1,19 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÉÏÁª£ºÒ»¸ö×ÖÊÇÉñ£¬¶þ¸ö×Ö»ù¶½£¬Èý¸ö×Ö¸ðÒàÃñ£¬ËÄ¸ö×ÖÉ«ÖÐ¶ö¹í£»</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä¸Šè”ï¼šä¸€ä¸ªå­—æ˜¯ç¥žï¼ŒäºŒä¸ªå­—åŸºç£ï¼Œä¸‰ä¸ªå­—è‘›äº¦æ°‘ï¼Œå››ä¸ªå­—è‰²ä¸­é¥¿é¬¼ï¼›</title>
 </head>
 
 <body>
 
-<p>ºáÅú£ºÎå¹ÈÖÕÌ¬<br>
+<p>æ¨ªæ‰¹ï¼šäº”è°·ç»ˆæ€<br>
 <br>
 <br>
 <br>
-ÉÏÁª£ºÒ»¸ö×ÖÊÇÉñ£¬¶þ¸ö×Ö»ù¶½£¬Èý¸ö×Ö¸ðÒàÃñ£¬ËÄ¸ö×ÖÉ«ÖÐ¶ö¹í£» <br>
-ÏÂÁª£º¾Å·ÖÆøÈçÂ¿£¬°Ë·ÖÆøÂíÁÐ£¬Æß·ÖÆøµÇÍ½×Ó£¬Áù·ÖÆøÌìÏÂÒù²Å¡£</p>
+ä¸Šè”ï¼šä¸€ä¸ªå­—æ˜¯ç¥žï¼ŒäºŒä¸ªå­—åŸºç£ï¼Œä¸‰ä¸ªå­—è‘›äº¦æ°‘ï¼Œå››ä¸ªå­—è‰²ä¸­é¥¿é¬¼ï¼› <br>
+ä¸‹è”ï¼šä¹åˆ†æ°”å¦‚é©´ï¼Œå…«åˆ†æ°”é©¬åˆ—ï¼Œä¸ƒåˆ†æ°”ç™»å¾’å­ï¼Œå…­åˆ†æ°”å¤©ä¸‹æ·«æ‰ã€‚</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
