--- a/fygc/zfjz.htm
+++ b/fygc/zfjz.htm
@@ -1,20 +1,21 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¶Ô¸ðÒàÃñÕâÖÖ×Ô·â½ÌÖ÷µÄ¼Ò»ï</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å¯¹è‘›äº¦æ°‘è¿™ç§è‡ªå°æ•™ä¸»çš„å®¶ä¼™</title>
 </head>
 
 <body>
 
-<p>¶Ô¸ðÒàÃñÕâÖÖ×Ô·â½ÌÖ÷µÄ¼Ò»ï<br>
+<p>å¯¹è‘›äº¦æ°‘è¿™ç§è‡ªå°æ•™ä¸»çš„å®¶ä¼™<br>
 <br>
 <br>
-Èç¹ûÊÇ½ö½ö¸ã¸ö½ÌÅÉÀ´¹ý¼Ò¼Ò£¬×î¶àÊÇ¾«Éñ²¡»¼ÕßµÄ·¶³ë£¬¿ÉÒÔ±»ÑÐ¾¿¡£Èç¹ûÊÇ<br>
+å¦‚æžœæ˜¯ä»…ä»…æžä¸ªæ•™æ´¾æ¥è¿‡å®¶å®¶ï¼Œæœ€å¤šæ˜¯ç²¾ç¥žç—…æ‚£è€…çš„èŒƒç•´ï¼Œå¯ä»¥è¢«ç ”ç©¶ã€‚å¦‚æžœæ˜¯<br>
 <br>
-Òýµ¼½ÌÖÚ×ö³ö·´Éç»á¡¢·´ÈËÐÔµÄÐÐÎª£¬¾ÍÊÇÐ°½Ì£¬ÊôÓÚÐÌ·¨µÄ·¶³ëÁË¡£<br>
+å¼•å¯¼æ•™ä¼—åšå‡ºåç¤¾ä¼šã€åäººæ€§çš„è¡Œä¸ºï¼Œå°±æ˜¯é‚ªæ•™ï¼Œå±žäºŽåˆ‘æ³•çš„èŒƒç•´äº†ã€‚<br>
 <br>
-ÔÚÄ¿Ç°ÎªÖ¹£¬ÎÒ¸öÈËÊÇÄÃËûµ±¸öÐ¡³óÀ´¿´´ýµÄ¡£</p>
+åœ¨ç›®å‰ä¸ºæ­¢ï¼Œæˆ‘ä¸ªäººæ˜¯æ‹¿ä»–å½“ä¸ªå°ä¸‘æ¥çœ‹å¾…çš„ã€‚</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
