--- a/fygc/zjmd.htm
+++ b/fygc/zjmd.htm
@@ -2,8 +2,8 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñ£º×î¾øÃîµÄÊ«</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ï¼šæœ€ç»å¦™çš„è¯—</title>
 </head>
 
 <body>
@@ -17,34 +17,34 @@
 					<div class="postmessage defaultpost">
 						<div id="postmessage_428" class="t_msgfont">
 							<div id="firstpost">
-								¸ðÒàÃñ£º×î¾øÃîµÄÊ«<br>
+								è‘›äº¦æ°‘ï¼šæœ€ç»å¦™çš„è¯—<br>
 								<br>
 								<br>
 								<br>
-								Ò»¡¢<br>
-								Ô¶¿´ÏóÂèÂè£¬<br>
-								½ü¿´ÊÇÌõ¹·¡£<br>
+								ä¸€ã€<br>
+								è¿œçœ‹è±¡å¦ˆå¦ˆï¼Œ<br>
+								è¿‘çœ‹æ˜¯æ¡ç‹—ã€‚<br>
 								<br>
 								<br>
-								¶þ¡¢<br>
-								Ô¶¿´Ïó¶ÂÇ½£¬<br>
-								½ü¿´Ò²ÏóÇ½£¬<br>
-								Ô½¿´Ô½ÏóÇ½£¬<br>
-								Ô­À´¾ÍÊÇÇ½¡£<br>
+								äºŒã€<br>
+								è¿œçœ‹è±¡å µå¢™ï¼Œ<br>
+								è¿‘çœ‹ä¹Ÿè±¡å¢™ï¼Œ<br>
+								è¶Šçœ‹è¶Šè±¡å¢™ï¼Œ<br>
+								åŽŸæ¥å°±æ˜¯å¢™ã€‚<br>
 								<br>
 								<br>
 								<br>
 								<br>
-								Èý¡¢<br>
-								ÀÏÌ«ÆÅ´©½¡ÃÀ¿ã£¬<br>
-								É§¾ò¾ò¡£<br>
+								ä¸‰ã€<br>
+								è€å¤ªå©†ç©¿å¥ç¾Žè£¤ï¼Œ<br>
+								éªšæŽ˜æŽ˜ã€‚<br>
 								<br>
-								ËÄ¡¢<br>
-								ÎÒÒ²ÏëÈ¥£¬<br>
-								µçÊÓÌ¨¡£<br>
-								¿É£¬<br>
-								¹²²úµ³£¬<br>
-								²»ÒªÎÒ¡£</div>
+								å››ã€<br>
+								æˆ‘ä¹Ÿæƒ³åŽ»ï¼Œ<br>
+								ç”µè§†å°ã€‚<br>
+								å¯ï¼Œ<br>
+								å…±äº§å…šï¼Œ<br>
+								ä¸è¦æˆ‘ã€‚</div>
 <SCRIPT type=text/javascript>var tagarray = [''];var tagencarray = [''];parsetag();</SCRIPT>
 						</div>
 					</div>
@@ -53,7 +53,8 @@
 			</table>
 		</div>
 	</form>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
