--- a/gzly/lw.htm
+++ b/gzly/lw.htm
@@ -2,17 +2,17 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¡¶ÇàÄêÎÄÑ§¼Ò¡·ÆÚ¿¯¡¶µ±´ú»ù¶½½Ì¹²²úÖ÷Òå¡ª¸ðÒàÃñµÄ<Éñ¾­>¡·</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ã€Šé’å¹´æ–‡å­¦å®¶ã€‹æœŸåˆŠã€Šå½“ä»£åŸºç£æ•™å…±äº§ä¸»ä¹‰â€”è‘›äº¦æ°‘çš„<ç¥žç»>ã€‹</title>
 </head>
 
 <body>
 
-<p>¡¶ÇàÄêÎÄÑ§¼Ò¡·ÆÚ¿¯¡¶µ±´ú»ù¶½½Ì¹²²úÖ÷Òå¡ª¸ðÒàÃñµÄ<Éñ¾­>¡·</p>
-<p>¡¡</p>
+<p>ã€Šé’å¹´æ–‡å­¦å®¶ã€‹æœŸåˆŠã€Šå½“ä»£åŸºç£æ•™å…±äº§ä¸»ä¹‰â€”è‘›äº¦æ°‘çš„<ç¥žç»>ã€‹</p>
+<p>ã€€</p>
 <p><img border="0" src="../pic/qlwxjlwqp.jpg"></p>
-<p>¡¡</p>
-<p>¡¡</p>
+<p>ã€€</p>
+<p>ã€€</p>
 <p><img border="0" src="../pic/qlwxj.jpg"></p>
 
 
@@ -24,8 +24,20 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>¡¡</p>
-<p>¡¡</p>
+</script>ã€€</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 </body>
 
 </html>
