--- a/gzly/zp3.htm
+++ b/gzly/zp3.htm
@@ -2,20 +2,22 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ğÒàÃñ²»Í¬Ê±ÆÚÕÕÆ¬µÚ3¼¾</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ä¸åŒæ—¶æœŸç…§ç‰‡ç¬¬3å­£</title>
 </head>
 
 <body>
 
-<p>¸ğÒàÃñ²»Í¬Ê±ÆÚÕÕÆ¬µÚ3¼¾</p>
-<p>¡¡</p>
+<p>è‘›äº¦æ°‘ä¸åŒæ—¶æœŸç…§ç‰‡ç¬¬3å­£</p>
+<p>ã€€</p>
 <p>
-</p><a href="../gzly/zp.htm" target="_blank">ÕÕÆ¬µÚ1¼¾</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>     <a href="../gzly/zp2.htm" target="_blank">ÕÕÆ¬µÚ2¼¾</a>
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">ÕÕÆ¬µÚ<span lang="en-us">3</span>¼¾</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">ÕÕÆ¬µÚ<span lang="en-us">4</span>¼¾</a> 
-<p><img border="0" src="../rj/nxg.png">´óÑ§<img border="0" src="../rj/mas.png">´óÒ»<img border="0" src="../rj/dxy.png">´óÑ§<img border="0" src="../rj/qxs2.png">´óËÄ<img border="0" src="../rj/js.png">¹¤×÷<img border="0" src="../rj/dh1.png">´ó»é</p>
+</p><a href="../gzly/zp.htm" target="_blank">ç…§ç‰‡ç¬¬1å­£</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>     <a href="../gzly/zp2.htm" target="_blank">ç…§ç‰‡ç¬¬2å­£</a>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">3</span>å­£</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">4</span>å­£</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">5</span>å­£</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">6</span>å­£</a> 
+<p><img border="0" src="../rj/nxg.png">å¤§å­¦<img border="0" src="../rj/mas.png">å¤§ä¸€<img border="0" src="../rj/dxy.png">å¤§å­¦<img border="0" src="../rj/qxs2.png">å¤§å››<img border="0" src="../rj/js.png">å·¥ä½œ<img border="0" src="../rj/dh1.png">å¤§å©š</p>
 <p><img border="0" src="../rj/gym.jpg"></p>
 <p><img border="0" src="../rj/2019.jpg"></p>
 <p><img border="0" src="../rj/cd.jpg"></p>
@@ -47,7 +49,8 @@
 <p><img border="0" src="../rj/gymny1.jpg"></p>
 <p><img border="0" src="../rj/gymny2.jpg"></p><p><img border="0" src="../rj/gymny3.jpg"></p><p><img border="0" src="../rj/gymny4.jpg"></p>
 <p><img border="0" src="../rj/gymny5.jpg"></p><p><img border="0" src="../rj/gymny7.jpg"></p><p><img border="0" src="../rj/gymny6.jpg"></p>
-
+<p>ã€€</p><p>ã€€</p>
+<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">å¤§è¯ã€Šç¥ç»ã€‹å›¾ç‰‡ç‰ˆ</font></A><font size="5">ã€€</font></p>
 <p><script>
 var _hmt = _hmt || [];
 (function() {
@@ -56,8 +59,20 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>¡¡</p>
-<p>¡¡</p>
+</script>ã€€</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 </body>
 
 </html>
