--- a/gzly/zp5.htm
+++ b/gzly/zp5.htm
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>葛亦民不同时期照片第4季</title>
+<title>葛亦民照片第5季之艺术照</title>
 </head>
 
 <body>
 
-<p>葛亦民不同时期照片第4季</p>
+<p>葛亦民照片第5季之艺术照</p>
 <p>　</p>
 <p>
 </p><a href="../gzly/zp.htm" target="_blank">照片第1季</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
@@ -17,26 +17,18 @@
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">照片第<span lang="en-us">4</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">照片第<span lang="en-us">5</span>季</a> 
 <span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">照片第<span lang="en-us">6</span>季</a> 
-<p><img border="0" src="../scsl/jsszhm.jpg"><img border="0" src="../scsl/gymmn.jpg"><img border="0" src="../scsl/dbg.jpg"><img border="0" src="../scsl/ghxw.jpg"><img border="0" src="../scsl/baidubeian.jpg"><img border="0" src="../scsl/beianali.jpg">
 
-<img border="0" src="../rj/dt1.png" width="97" height="150"><img border="0" src="../rj/gz3.png"><img border="0" src="../rj/gz1.png"><img border="0" src="../rj/d2.png"><img border="0" src="../rj/d1.png">
-<img border="0" src="../rj/dy3.png"><img border="0" src="../rj/g1.png"><img border="0" src="../rj/h1.png"><img border="0" src="../rj/h3.png"><img border="0" src="../rj/dh2.png"><img border="0" src="../rj/dh3.png"></p>
-<img border="0" src="../rj/ltp.jpg">
-<img border="0" src="../rj/gsdq.jpg">
-<img border="0" src="../rj/gdwg.jpg">
-<img border="0" src="../rj/nbx.jpg">
-<img border="0" src="../rj/wns.jpg">
-<img border="0" src="../rj/zsy.jpg"><img border="0" src="../rj/nvg.jpg">
-<img border="0" src="../rj/nvg2.jpg">
-<img border="0" src="../rj/2019zp.jpg"><span lang="en-us">2019</span>
-	<img border="0" src="../rj/nj2019.jpg"><span lang="en-us">2019</span>
-	<img border="0" src="../rj/2020zj.jpg">
-	<img border="0" src="../rj/2020zj2.jpg">
-	<span lang="en-us">2020</span><p><img border="0" src="../scsl/2021.jpg"><img border="0" src="../scsl/gz.jpg">　</p>
-<p><img border="0" src="../scsl/tzw.jpg"><img border="0" src="../scsl/gegod.jpg">　</p>
-<p><img border="0" src="../scsl/gejidu.jpg">　</p>
+<p><img border="0" src="../dxrj/gym3l.jpg"><img border="0" src="../dxrj/bqb3.jpg"><img border="0" src="../dxrj/bqb.jpg"><img border="0" src="../dxrj/bqb2.jpg"><img border="0" src="../dxrj/dhz.jpg"><img border="0" src="../dxrj/dhz2.jpg">
+<img border="0" src="../dxrj/lao.jpg"><img border="0" src="../dxrj/laoz.jpg">
+<img border="0" src="../dxrj/2sxz.jpg"><img border="0" src="../dxrj/2sxz2.jpg"><img border="0" src="../dxrj/d1.jpg"><img border="0" src="../dxrj/d2.jpg"><img border="0" src="../dxrj/d3.jpg"><img border="0" src="../dxrj/z1.jpg">
+<img border="0" src="../dxrj/jesusgym.jpg"><img border="0" src="../dxrj/yhhgym.jpg"><img border="0" src="../dxrj/ysgym.jpg"><img border="0" src="../dxrj/ysgym222.jpg">
+<img border="0" src="../dxrj/ssqjz.jpg"><img border="0" src="../dxrj/ssgz.jpg"><img border="0" src="../dxrj/ssqjz222.jpg"><img border="0" src="../dxrj/sscz.jpg">
+<img border="0" src="../dxrj/ssdx.jpg"><img border="0" src="../dxrj/ysgym333.jpg"><img border="0" src="../dxrj/ysgym444.jpg"><img border="0" src="../dxrj/ysgym555.jpg">
+<img border="0" src="../dxrj/ysgym666.jpg"><img border="0" src="../dxrj/gym666.jpg"><img border="0" src="../dxrj/gym777.jpg"><img border="0" src="../dxrj/gym888.jpg">
+<img border="0" src="../dxrj/fd1.jpg"><img border="0" src="../dxrj/fd2.jpg">
+<img border="0" src="../dxrj/fd3.jpg"><img border="0" src="../dxrj/fdz.jpg"><img border="0" src="../dxrj/fdz2.jpg"><img border="0" src="../dxrj/fmz.jpg">
+<img border="0" src="../dxrj/ggc.jpg"><img border="0" src="../dxrj/ggp.jpg"><img border="0" src="../dxrj/qc.jpg"><img border="0" src="../dxrj/yx.jpg"><img border="0" src="../dxrj/2017.jpg">
 
-<img border="0" src="../rj/gym20170707.gif">
 <p>　</p><p>　</p>
 <p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p>
 <p><script>
