--- a/gzly/zp.htm
+++ b/gzly/zp.htm
@@ -2,84 +2,85 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñ²»Í¬Ê±ÆÚÕÕÆ¬</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ä¸åŒæ—¶æœŸç…§ç‰‡</title>
 </head>
 
 <body>
 
-<p>¸ðÒàÃñ²»Í¬Ê±ÆÚÕÕÆ¬</p>
-<p>¡¡</p>
-<p>¡¡
-</p><a href="../gzly/zp.htm" target="_blank">ÕÕÆ¬µÚ1¼¾</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>     <a href="../gzly/zp2.htm" target="_blank">ÕÕÆ¬µÚ2¼¾</a>
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">ÕÕÆ¬µÚ3¼¾</a> 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">ÕÕÆ¬µÚ<span lang="en-us">4</span>¼¾</a> 
-
- <p>±ê×¼ÕÕ&nbsp;&nbsp;&nbsp;&nbsp;</p>
+<p>è‘›äº¦æ°‘ä¸åŒæ—¶æœŸç…§ç‰‡</p>
+<p>ã€€</p>
+<p>ã€€
+</p><a href="../gzly/zp.htm" target="_blank">ç…§ç‰‡ç¬¬1å­£</a> <span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>     <a href="../gzly/zp2.htm" target="_blank">ç…§ç‰‡ç¬¬2å­£</a>
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp3.htm" target="_blank">ç…§ç‰‡ç¬¬3å­£</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp4.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">4</span>å­£</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp5.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">5</span>å­£</a> 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>    <a href="../gzly/zp6.htm" target="_blank">ç…§ç‰‡ç¬¬<span lang="en-us">6</span>å­£</a> 
+ <p>æ ‡å‡†ç…§&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </p>
 <p><img border="0" src="bzz.png" width="239" height="219">
 <img border="0" src="d.png" width="150" height="150"><img border="0" src="gd.png" width="150" height="150">
 <img border="0" src="s.png" width="150" height="150"><img border="0" src="h.png" width="150" height="150"><img border="0" src="bzz.png" width="150" height="150"><img border="0" src="hong.png" width="150" height="150"><img border="0" src="zuo.jpg" width="150" height="150"><img border="0" src="zhan.jpg" width="150" height="150"><img border="0" src="g1.png" >
-<img border="0" src="../rj/1981x.png" ><img border="0" src="gz2.png" ><img border="0" src="sm.png" >Ê¥Ä¸¡¡<img border="0" src="cz.jpg" >³õÖÐ<img border="0" src="gz.jpg">¸ßÖÐ<img border="0" src="dx.jpg" >´óÑ§
+<img border="0" src="../rj/1981x.png" ><img border="0" src="gz2.png" ><img border="0" src="sm.png" >åœ£æ¯ã€€<img border="0" src="cz.jpg" >åˆä¸­<img border="0" src="gz.jpg">é«˜ä¸­<img border="0" src="dx.jpg" >å¤§å­¦
 
-&nbsp;<img border="0" src="xx.gif" >ÐÝÏÐ<img border="0" src="cf.jpg" >²É·Ã
-<p>¡¡</p>
+&nbsp;<img border="0" src="xx.gif" >ä¼‘é—²<img border="0" src="cf.jpg" >é‡‡è®¿
+<p>ã€€</p>
 <p><br><img border="0" src="1.jpg" >2012</p>
-<p>¡¡</p>
+<p>ã€€</p>
 <p><br><img border="0" src="2.jpg" >2012</p>
-<p>¡¡</p>
+<p>ã€€</p>
 <p>&nbsp;<br><img border="0" src="2013.jpg" >2013</p>
 <p><img border="0" src="gym2017.jpg" width="1136" height="852"><span lang="en-us">2017</span></p>
-<p>¡¡</p>
-<p>¡¡</p>
-<p>¡¡<img border="0" src="byz.jpg" >¸ðÒàÃñ´óÑ§±ÏÒµÖ¤</p>
-<p>¡¡</p>
-<p>&nbsp;<img border="0" src="dxbyb.jpg" >´óÑ§±ÏÒµ°à(µ¹ÊýµÚ¶þÅÅÓÒËÄ£©</p>
-<p>¡¡</p>
-<p><img border="0" src="dxbyx.jpg" >´óÑ§±ÏÒµÏµ£¨µ¹ÊýµÚÒ»ÅÅÓÒ°Ë£©</p>
-<p>¡¡</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>ã€€<img border="0" src="byz.jpg" >è‘›äº¦æ°‘å¤§å­¦æ¯•ä¸šè¯</p>
+<p>ã€€</p>
+<p>&nbsp;<img border="0" src="dxbyb.jpg" >å¤§å­¦æ¯•ä¸šç­(å€’æ•°ç¬¬äºŒæŽ’å³å››ï¼‰</p>
+<p>ã€€</p>
+<p><img border="0" src="dxbyx.jpg" >å¤§å­¦æ¯•ä¸šç³»ï¼ˆå€’æ•°ç¬¬ä¸€æŽ’å³å…«ï¼‰</p>
+<p>ã€€</p>
 <p>
-<br><br>Á½ÌõÒ®Ã·¾­£¨¸ðÒàÃñ¾­£©ÐÂÎÅ½ØÍ¼<br><br>
+<br><br>ä¸¤æ¡è€¶æ¢…ç»ï¼ˆè‘›äº¦æ°‘ç»ï¼‰æ–°é—»æˆªå›¾<br><br>
 
 <img border="0" src="bj.jpg" width="560" height="348"><img border="0" src="yz.jpg" width="597" height="572"></p>
-<p>¡¡</p>
-<p>¡¡</p>
-<p>¸ßÖÐ±ÏÒµ£º</p>
+<p>ã€€</p>
+<p>ã€€</p>
+<p>é«˜ä¸­æ¯•ä¸šï¼š</p>
 <p><img border="0" src="g1.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d1.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d2.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d3.jpg"></p>
-<p>¡¡</p>
-<p>¹¤×÷Ê±ÆÚÓëÅ®ÓÑ£º</p>
+<p>ã€€</p>
+<p>å·¥ä½œæ—¶æœŸä¸Žå¥³å‹ï¼š</p>
 <p><img border="0" src="d4.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d5.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d6.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d7.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d8.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d9.jpg"></p>
-<p>¡¡</p>
-<p>´óÑ§£º</p>
+<p>ã€€</p>
+<p>å¤§å­¦ï¼š</p>
 <p><img border="0" src="d10.jpg"></p>
 
-<p>¡¡</p><p>¡¡</p>
-<p> <A href="../rj/dhsj.htm" target=_blank>´ó»°¡¶Éñ¾­¡·Í¼Æ¬°æ</A>¡¡</p><script>
+<p>ã€€</p><p>ã€€</p>
+<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">å¤§è¯ã€Šç¥žç»ã€‹å›¾ç‰‡ç‰ˆ</font></A><font size="5">ã€€</font></p><script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -88,7 +89,19 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-<p>¡¡</p><p>¡¡</p>
+<p>ã€€</p><p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 </body>
 
 </html>
